Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug
Bug#: 7622
Product:  
Component:  
Status: RESOLVED
Resolution: FIXED
Assigned To: Eric Botcazou <ebotcazou@gcc.gnu.org>
Host:
Reported against  
Priority:  
Severity:  
Target Milestone:  
 
 
Target:
Reporter: Jan Hubicka <hubicka@kampanus.ms.mff.cuni.cz>
Add CC:
CC:
Remove selected CCs
Build:
URL:
Summary:
Keywords:
Known to work:
Known to fail:

Attachment Description Type Created Size Actions
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 7622 depends on: Show dependency tree
Show dependency graph
Bug 7622 blocks:

Additional Comments:






View Bug Activity   |   Format For Printing   |   Clone This Bug


Description:   Last confirmed: Opened: 2002-08-17 05:36
taking address of inline function forces it to be output even when it has been
deferred for inlining. In case we are speaking about nested function of extern
inline function like in the testcase:
extern inline t()
{
  int q()
{}
  return q;
}
the compiler dies as no RTL is generated for them.  I guess the function should
not be output but I am not quite sure how to check this.

Release:
3.0.x, 3.1.x, 3.2.x, 3.3 prereleases

Environment:
i386-unkonwn-linux

------- Comment #1 From Jan Hubicka 2002-08-17 05:36 -------
Fix:
don't use weird extensions :)

------- Comment #2 From Volker Reichelt 2002-11-16 14:04 -------
State-Changed-From-To: open->analyzed
State-Changed-Why: Confirmed.
    Regression from 2.95.3.

------- Comment #3 From Eric Botcazou 2002-11-20 03:21 -------
Responsible-Changed-From-To: unassigned->ebotcazou
Responsible-Changed-Why: Investigating.

------- Comment #4 From Eric Botcazou 2002-12-04 12:38 -------
State-Changed-From-To: analyzed->closed
State-Changed-Why: Fixed.

------- Comment #5 From Eric Botcazou 2002-12-04 14:58 -------
From: ebotcazou@gcc.gnu.org
To: gcc-gnats@gcc.gnu.org
Cc:  
Subject: c/7622
Date: 4 Dec 2002 14:58:21 -0000

 CVSROOT:	/cvs/gcc
 Module name:	gcc
 Changes by:	ebotcazou@gcc.gnu.org	2002-12-04 06:58:21
 
 Modified files:
 	gcc            : ChangeLog c-semantics.c 
 
 Log message:
 	PR c/7622
 	* c-semantics (genrtl_scope_stmt): Do not output inlined
 	nested functions that contain no code.
 
 Patches:
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=1.16051&r2=1.16052
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/c-semantics.c.diff?cvsroot=gcc&r1=1.47&r2=1.48
 


------- Comment #6 From Eric Botcazou 2002-12-04 20:28 -------
From: ebotcazou@gcc.gnu.org
To: gcc-gnats@gcc.gnu.org
Cc:  
Subject: c/7622
Date: 4 Dec 2002 20:28:35 -0000

 CVSROOT:	/cvs/gcc
 Module name:	gcc
 Branch: 	gcc-3_2-branch
 Changes by:	ebotcazou@gcc.gnu.org	2002-12-04 12:28:35
 
 Modified files:
 	gcc            : ChangeLog c-semantics.c 
 
 Log message:
 	PR c/7622
 	* c-semantics (genrtl_scope_stmt): Do not output inlined
 	nested functions that contain no code.
 
 Patches:
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&only_with_tag=gcc-3_2-branch&r1=1.13152.2.657.2.155&r2=1.13152.2.657.2.156
 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/c-semantics.c.diff?cvsroot=gcc&only_with_tag=gcc-3_2-branch&r1=1.40.2.2&r2=1.40.2.2.4.1
 

Bug List: (This bug is not in your last search results)   Show last search results      Search page      Enter new bug