	PR c/7622 	* c-semantics (genrtl_scope_stmt): Do not output inlined 	nested functions that contain no code.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@59817 138bc75d-0d04-0410-961f-82ee72b054a4